app/templates/deploy/k8s/np3/route.yml
apiVersion: v1
kind: Route
metadata:
  name: digital-service-banker-assignment-test-apiserver
  namespace: dct-nextgen-services
spec:
  host: dct-nxgn.corp.frbnp3.com
  path: /bnkrasgnmttesttest/v1
  tls:
    termination: edge
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIEogIBAAKCAQEAypK/PxWKaGUxFyvwRYkRA8NWDn5duiDLWPnk+//c00ulUuB7
[...]
      gc9YdYK9yfrrkHzYdXIGQW1MW+Ize+9dS/1Jbp7WIgc9HPqeWrQ=
      -----END RSA PRIVATE KEY-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIFITCCBAmgAwIBAgITPAAAB2n9I+uObl5i3QAAAAAHaTANBgkqhkiG9w0BAQsF
[...]
      khJd5qThPOoWNvqoyiN8USp7S/y5
      -----END CERTIFICATE-----
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIFWTCCA0GgAwIBAgITegAAAAU5LyDkQ9IoCwAAAAAABTANBgkqhkiG9w0BAQsF
[...]
      TxVsdAIi5Roi2MTzK30MQp6MBEiISh6Nwf4n4QE=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFjjCCA3agAwIBAgIQXX25z0n/Oq9DKhG8VoUdAzANBgkqhkiG9w0BAQsFADAX
[...]
      yV363saJXh8hqvlyIRJIMEwVU46ZCWt25v641Okemgh3Hg==
      -----END CERTIFICATE-----
  to:
    kind: Service
    name: digital-service-banker-assignment-test-apiserver
